--- a/_posts/2009-10-12-1-04200.md
+++ b/_posts/2009-10-12-1-04200.md
@@ -104,4 +104,4 @@ There were differing opinions on this issue within the Executive Committee; some
 
 And so, the plan was finalized. Wu De was entrusted with selecting the fishing boat models and proposing a corresponding list of spare parts and materials for procurement. After the meeting, at Meng De's suggestion, a group of transmigrators with good physical condition and some interest in navigation were selected to participate in training. Meng De used his work connections to find a friend whose family operated several coastal cargo ships and sent the people onto the ships for direct, one-on-one training in relevant skills.
 [y002]: /characters/y002 "Wen Desi"
-[y005]: /characters/y005 "Ma千瞩"
+[y005]: /characters/y005 "Ma Qianzhu"
