--- a/_posts/2009-10-14-1-04400.md
+++ b/_posts/2009-10-14-1-04400.md
@@ -100,4 +100,4 @@ The group walking around the track completed another lap, during which Du Wen co
 [y001]: /characters/y001 "Xiao Zishan"
 [y002]: /characters/y002 "Wen Desi"
 [y003]: /characters/y003 "Wang Luobin"
-[y005]: /characters/y005 "Ma千瞩"
+[y005]: /characters/y005 "Ma Qianzhu"
