--- a/_posts/2009-10-24-2-00700.md
+++ b/_posts/2009-10-24-2-00700.md
@@ -22,7 +22,7 @@ Wu Kuangming said, "Experts use skill, amateurs can only use brute force. Just l
 
 "No way, I want to keep my arms and legs. I can't handle that thing."
 
-"With my physique, if I were to become the Texas Chainsaw Massacre killer, I'd probably chop off a few pieces of myself first," Shao Zong said with a愁眉苦脸 as he pulled the saw. "I originally thought the communications group would be easier, that I could build China Telecom with my own hands. I didn't expect to be preparing telephone poles first."
+"With my physique, if I were to become the Texas Chainsaw Massacre killer, I'd probably chop off a few pieces of myself first," Shao Zong said with a sad face as he pulled the saw. "I originally thought the communications group would be easier, that I could build China Telecom with my own hands. I didn't expect to be preparing telephone poles first."
 
 Just as Wu Kuangming was about to say something to encourage them, he suddenly heard someone scream, "Oh my god! A snake!" Before he could react, he saw three or four people scrambling and crawling out of the woods, having lost their wits, their axes and saws dropped all over the ground.
 
