--- a/_posts/2009-10-3-1-03300.md
+++ b/_posts/2009-10-3-1-03300.md
@@ -68,7 +68,7 @@ As he was giving out orders, the liaison sent to communicate with the lookouts o
 
 Several men, led by Bei Wei, watched Ran Yao and the table in silence. On a large drawing table behind them lay several walkie-talkie chargers, their lights blinking. A 19-inch LCD monitor displayed nearly ten different camera feeds. Under the table was a heap of computer cases, battery packs, and a tangled mess of wires. The air was hot and stuffy. [Xiao Zishan][y001], on duty monitoring the cameras, was wearing only an old-fashioned undershirt and was still sweating profusely.
 
-An enlarged, printed digital photo was taped to the rosewood tabletop. It showed a flower boat with a wide, flat bow and a high,翹 stern, with a large oar at the back and two smaller ones at the front for maneuvering in narrow waters. The boat was beautifully decorated with carved beams and painted rafters.
+An enlarged, printed digital photo was taped to the rosewood tabletop. It showed a flower boat with a wide, flat bow and a high, raised stern, with a large oar at the back and two smaller ones at the front for maneuvering in narrow waters. The boat was beautifully decorated with carved beams and painted rafters.
 
 All flower boats, regardless of size, had a bow cabin, a central cabin, and a stern section. The central cabin was the largest, taking up about half the boat's length, and was draped with curtains on all sides for privacy. They presumed [Director Wen][y002] was most likely being held there.
 
