--- a/_posts/2009-11-17-2-03100.md
+++ b/_posts/2009-11-17-2-03100.md
@@ -24,19 +24,19 @@ The city was not peaceful either. There were more than two thousand villagers wh
 
 Just in case, he had already sent his trusted family members with able-bodied men to secretly send his family and valuable savings to the prefectural city, with instructions to immediately send them across the sea back to their hometown if anything went wrong. In this way, he became a complete "naked official."
 
-The city spent more than ten days in fear, but the pirates still did not come to attack. The spies came back and reported that the髡贼 (kun zei - cut-hair bandits) had stopped after building the road to Bairen Tan, and were now engaged in large-scale construction there, seemingly with no intention of attacking the city. Wu Mingjin couldn't figure out what was so special about Bairen Tan that was worth them digging around—he had never heard of any ancient tombs or treasures buried there.
+The city spent more than ten days in fear, but the pirates still did not come to attack. The spies came back and reported that the cut-hair bandits had stopped after building the road to Bairen Tan, and were now engaged in large-scale construction there, seemingly with no intention of attacking the city. Wu Mingjin couldn't figure out what was so special about Bairen Tan that was worth them digging around—he had never heard of any ancient tombs or treasures buried there.
 
 "This is really a headache." Wu Mingjin patted his head. In the past ten days, it seemed that his hair had turned a lot grayer.
 
 "My lord, Inspector Fu requests an audience." The long-serving attendant came in to report.
 
-"Let him in." Wu Mingjin said irritably. Although he knew that Fu Baiwen's twelve men could not have stopped the髡贼 (kun zei - cut-hair bandits) from landing, he still held a grudge against this person for fleeing at the sight of the enemy and not fighting hard. Now he could only be perfunctory with him. After all, he was the only military officer in the county, and he still had to rely on him. Fu Baiwen probably also knew that his crime was serious, and he was very diligent in both preparing for war in the city and scouting outside the city.
+"Let him in." Wu Mingjin said irritably. Although he knew that Fu Baiwen's twelve men could not have stopped the cut-hair bandits from landing, he still held a grudge against this person for fleeing at the sight of the enemy and not fighting hard. Now he could only be perfunctory with him. After all, he was the only military officer in the county, and he still had to rely on him. Fu Baiwen probably also knew that his crime was serious, and he was very diligent in both preparing for war in the city and scouting outside the city.
 
-"Your Honor, the髡贼 (kun zei - cut-hair bandits) are building a city on Bairen Tan!"
+"Your Honor, the cut-hair bandits are building a city on Bairen Tan!"
 
 Wu Mingjin's hand trembled, and the tea spilled. He hurriedly asked, "How do you know?"
 
-"Yesterday I went to investigate in person. The髡贼 (kun zei - cut-hair bandits) have already built many houses on Bairen Tan!"
+"Yesterday I went to investigate in person. The cut-hair bandits have already built many houses on Bairen Tan!"
 
 Wu Mingjin's teacup almost fell to the ground—this was what he was most worried about. If the pirates stayed, what would he do? In the past, he had always hoped that the pirates would leave after a few days. Now, not only did they not leave, they were also building roads, and now they were building a stockade less than ten li from the county town.
 
@@ -46,9 +46,9 @@ If the autumn grain could not be collected... Magistrate Wu knew that this was m
 
 "Quickly, invite Mr. Liu." Wu Mingjin turned around and ordered, "Invite all the gentry in the city! And Old Master Huang from Huang Family Village."
 
-The officials and gentry in the city heard the news from the spies at the meeting. Among them, there were quite a few who had read military books. Seeing this group of髡贼 (kun zei - cut-hair bandits) lined up along the main road, they thought that the pirates did not know military affairs and had set up a long snake formation that could not support its head and tail. They had not built a stockade with deep trenches and high ramparts like the one at Bopu. There were only two or three bandits with matchlocks at each location, and they were all short-clothed,髡发 (kun fa - cut-hair) laborers.
+The officials and gentry in the city heard the news from the spies at the meeting. Among them, there were quite a few who had read military books. Seeing this group of cut-hair bandits lined up along the main road, they thought that the pirates did not know military affairs and had set up a long snake formation that could not support its head and tail. They had not built a stockade with deep trenches and high ramparts like the one at Bopu. There were only two or three bandits with matchlocks at each location, and they were all short-clothed, cut-hair laborers.
 
-This made the officials and gentry much more courageous. Fu Baiwen, because he had lost his defensive position as the inspector of Bopu, was the most active in advocating for an attack on the pirates in order to redeem himself. Magistrate Wu specially pointed out that the autumn harvest was approaching, and the farmers in the villages along the river did not dare to go to the fields. If there was a delay, the harvest for the whole year would be gone. Not only would he be failing the court, but the common people below would probably have no means of livelihood, let alone pay rent... The gentry's minds gradually became active. Since it concerned their own vital interests, they had to be more proactive. Someone immediately expressed their willingness to contribute men and money to fight the war and drive away the pirates.
+This made the officials and gentry much more courageous. Fu Baiwen, because he had lost his defensive position as the inspector of Bopu, was the most active in advocating for an attack on the pirates in order to redeem himself. Magistrate Wu specially pointed out that the autumn harvest was approaching, and the farmers in the villages along the river did not dare to go to the fields. If there was a delay, the harvest for the whole year would be gone. Not only would he be failing the court, but the common people below would probably have no means of livelihood, let alone pay rent... The gentry's minds gradually became active. Someone immediately expressed their willingness to contribute men and money to fight the war and drive away the pirates.
 
 On the eleventh day of the ninth month, the militia leaders of all the villages with local braves were ordered to enter the city for a meeting. Magistrate Wu's wording this time was extremely severe. In addition, several powerful gentry and large households in the county had clearly stated their willingness to fight to the death. The small stockades also had to agree to participate, either by contributing three or five men, or by providing swords, spears, and gunpowder. By the thirteenth, nearly three hundred local braves had arrived in the county town. Magistrate Wu still felt that it was not enough and sent people to Xinhua Township and Lipan Du in the south of the county to recruit thirty Li native soldiers from the Li villages. These native soldiers were all crossbowmen, equipped with poisoned arrows.
 
