--- a/_posts/2009-11-8-2-02200.md
+++ b/_posts/2009-11-8-2-02200.md
@@ -66,7 +66,7 @@ Evil arts again! Magistrate Wu did not believe in supernatural things, but the p
 
 However, the problem at this time was not the road, but why the pirates were building a road. Since they were bandits, it could not be for accumulating merit; their intention was to rob, so this was superfluous. Besides, what was there to rob at Bairen Tan? There were only a few stonemasons there, and most of them had probably fled by now.
 
-In his hesitation, he quickly ordered the officials in the county yamen, Liu Dalin, and the centurion who had come to reinforce them to be invited to discuss countermeasures together. After hearing the situation from the scout and Huang Dahuhu, the officials and gentry in the hall were all silent. They had originally thought that if the sea bandits landed, how bad could it be? At most, they would plunder the common people and burn down a few villages and market towns. Since the Song Dynasty, this county had never been captured, whether it was by the Li people's rebellion or by the plunder of sea bandits. Some people were even glad that this group of sea bandits landed after the Mid-Autumn Festival. If it were before the winter solstice when the autumn grain was harvested, the losses would probably be much more severe. However, in the past few days, bad news came one after another. First, the scouts reported that the other side had set up a large camp at Bopu and was unloading goods onto the shore day and night. Then, the Huang Family Village local braves, who had always been known for their bravery and fighting spirit, were defeated. Now the pirates were even building a road. No one knew what this group of髡发之徒 (kun fa zhi tu - people with cut hair) wanted to do.
+In his hesitation, he quickly ordered the officials in the county yamen, Liu Dalin, and the centurion who had come to reinforce them to be invited to discuss countermeasures together. After hearing the situation from the scout and Huang Dahuhu, the officials and gentry in the hall were all silent. They had originally thought that if the sea bandits landed, how bad could it be? At most, they would plunder the common people and burn down a few villages and market towns. Since the Song Dynasty, this county had never been captured, whether it was by the Li people's rebellion or by the plunder of sea bandits. Some people were even glad that this group of sea bandits landed after the Mid-Autumn Festival. If it were before the winter solstice when the autumn grain was harvested, the losses would probably be much more severe. However, in the past few days, bad news came one after another. First, the scouts reported that the other side had set up a large camp at Bopu and was unloading goods onto the shore day and night. Then, the Huang Family Village local braves, who had always been known for their bravery and fighting spirit, were defeated. Now the pirates were even building a road. No one knew what this group of people with cut hair wanted to do.
 
 Wu Mingjin looked at Liu Dalin, whom he relied on as a senior advisor, "What do you think, old sir?"
 
@@ -74,7 +74,7 @@ The Jinshi Liu supported his forehead with his hand and said after a long while,
 
 Magistrate Wu and Wu Ya who were present were both startled. Magistrate Wu hurriedly cupped his hands and said, "Please teach me, old sir."
 
-"I'm afraid the intention of these髡发 (kun fa - cut hair) sea pirates is to attack the city!"
+"I'm afraid the intention of these cut-hair sea pirates is to attack the city!"
 
 "How can you tell?"
 
@@ -98,4 +98,4 @@ Seeing that everyone in the hall was looking at him, he couldn't help but panic.
 
 Magistrate Wu cursed Centurion Sun as a good-for-nothing in his heart, but he had not expected the garrison soldiers to be of much use anyway. He was afraid that he would have to ask General Tang to send troops for this matter.
 
-"The only strategy now is to harass them," Liu Dalin said. "The髡贼 (kun zei - cut-hair bandits) can't always be gathered together when they are building the road. We should send more local braves, promise them heavy rewards, either harass them with bows and arrows, or set fire to them when there is an opportunity. Harass them day and night so that they can't rest. This will surely hinder their road construction."
+"The only strategy now is to harass them," Liu Dalin said. "The cut-hair bandits can't always be gathered together when they are building the road. We should send more local braves, promise them heavy rewards, either harass them with bows and arrows, or set fire to them when there is an opportunity. Harass them day and night so that they can't rest. This will surely hinder their road construction."
