--- a/_posts/2009-12-3-2-04700.md
+++ b/_posts/2009-12-3-2-04700.md
@@ -20,7 +20,7 @@ Wu De also threw out material rewards at the right time. The team that completed
 
 Wu De's measure was to see how much skill these team leaders had in managing people. This measure would intensify the competition. A team leader who did not win the hearts of the people and manage them reasonably, but only relied on violent methods such as sticks and starvation to force the laborers to work hard, could only achieve his goal for a short time. It would not work in the long run. And the oppressed laborers also saw a way to counter the team leader—as long as they slacked off, for four consecutive seven-day periods, the high and mighty team leader would fall. The two sides had to reach a balance to cooperate effectively.
 
-Obviously, Fu Youdi was extremely unsuited to this kind of competition. He was the first to become a captive team leader, and from that time on, he began to act tyrannically, not working himself, but only seeking his own benefits. Later, when the four people under him all became team leaders, he was extremely unbalanced. In order to maintain his "oldest team leader" face in front of Wu De, he intensified his oppression of his subordinates, even豢养 a few thugs by withholding everyone's food, and established a tyrannical little kingdom. Almost every day, someone in his camp was beaten. The result was that he was increasingly hated in his own team, but he was completely unaware of it.
+Obviously, Fu Youdi was extremely unsuited to this kind of competition. He was the first to become a captive team leader, and from that time on, he began to act tyrannically, not working himself, but only seeking his own benefits. Later, when the four people under him all became team leaders, he was extremely unbalanced. In order to maintain his "oldest team leader" face in front of Wu De, he intensified his oppression of his subordinates, even keeping a few thugs by withholding everyone's food, and established a tyrannical little kingdom. Almost every day, someone in his camp was beaten. The result was that he was increasingly hated in his own team, but he was completely unaware of it.
 
 Wang Tian was more honest. Although he also took more benefits for himself, he did not oppress his subordinates. He took the lead in working hard. Everyone thought he was a good person, but some people inevitably slacked off. At first, Wang Tian was always weak and unwilling to manage them much. Later, when he found that his labor quota was slowly declining, he became anxious and started hitting people. When the quota went up, he repeated the cycle.
 
